# slideio-python

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  build-dependencies.ps1  build-dependencies.sh  build-wheels-macos.sh  build-wheels-manylinux.sh  build-wheels-win.ps1  build-wheels.sh  build_slideio_dists.py  build_slideio_dists_linux.sh  buildwheels.ps1  conan-one.ps1  conan-one.sh  conan.ps1  conan.sh  conanfile.txt  define_python_env.sh  helper.cmake  install.py  lib.ps1  pyproject.toml  rename-macos-wheels.sh  repair-wheels.sh  setup.py  test.ps1
.github/workflows/: linux-conan.yml  linux-wheels.yml  macos-conan.yml  macos-wheels.yml  macos-win-conan.yml  windows-build-wheels.yml  windows-test.yml  windows-wheels.yml
auxfiles/: import-only.py  rpath.sh  zvi.py  zvi2.py
build-scripts/linux/: add_path.sh  build_one_wheel.sh  define_python_envs.sh  manylinux-build-wheels.sh
build-scripts/linux/aux/: display_rpath.sh
build-scripts/windows/: buildwheels.ps1
conan/Linux/manylinux/: linux_debug  linux_release
conan/Linux/ubuntu/: ubuntu_debug  ubuntu_release
conan/OSX/arm/: osx_debug  osx_release
conan/OSX/x86-64/: osx_debug  osx_release
conan/Windows/: x86_64_debug  x86_64_release
docker/manylinux_2_28/: Dockerfile  Dockerfile-base
docker/manylinux_2_28_s390x/: Dockerfile
docker/manylinux_2_28_x86_64/: Dockerfile  global.conf
slideio/: __init__.py
slideio/core/: __init__.py
slideio/wrappers/: py_slideio.py
src/: CMakeLists.txt  build-wheels-linux.sh  conanfile.txt  pyaux.hpp  pybind.cpp  pyconverter.cpp  pyconverter.hpp  pyerror.hpp  pyglobals.cpp  pyglobals.hpp  pyscene.cpp  pyscene.hpp  pyslide.cpp  pyslide.hpp  pytransformation.cpp  repair_rpaths.sh  set_rpaths.sh  setup.py
tests/: test.py
